--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,22 @@
+body {
+    background-color: #484d5c;
+    color: #c0ccd4;
+    font-family: 'Crimson Text', serif;
+}
+
+.btn-sm {
+    padding-left: 12px;
+    padding-right: 12px;
+}
+
+#title, h6 {
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    color: #ffce00;
+    text-align: center;
+}
+
+
 .container-fluid {
     margin-top: 10px;
 }
@@ -6,6 +25,7 @@
     margin-top: 20px;
     float: right;
     width: 300px;
+    margin-left: 10px;
 
 }
 
@@ -21,5 +41,5 @@
 }
 .img-responsive {
     max-width: 275px;
-    height: 200px;
+    height: 175px;
 }
