--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,15 @@
 body {
     background-color: #484d5c;
     color: #c0ccd4;
-    font-family: 'Crimson Text', serif;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
+    font-size: .80em;
 }
 
 .btn-sm {
     padding-left: 12px;
     padding-right: 12px;
+    font-size: .9em;
 }
 
 #title, h6 {
