--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,12 +12,17 @@ body {
     font-size: .9em;
 }
 
-#title, h6 {
+#title, #subtitle {
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
     color: #ffce00;
     text-align: center;
 }
+
+h6 {
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    color: #ffce00;}
 
 
 .container-fluid {
