--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,31 +5,26 @@ body {
     font-weight: 300;
     font-size: .80em;
 }
-
 .btn-sm {
     padding-left: 12px;
     padding-right: 12px;
     font-size: .9em;
 }
-
 #title, #subtitle {
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
     color: #ffce00;
     text-align: center;
 }
-
 h6 {
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
-    color: #ffce00;}
-
-
+    color: #ffce00;
+}
 .container-fluid {
     margin-top: 10px;
     margin-left: 20px;
 }
-
 .form-container {
     margin-top: 20px;
     float: right;
@@ -37,13 +32,11 @@ h6 {
     margin-left: 10px;
 
 }
-
 .gif-block {
     margin-top: 20px;
     margin-left: 10px;
     display: inline-block;
 }
-
 .gifs-here {
     width: 70%;
 
